[INJIWEB-1541] change api response to camelCase for consistency
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>